--- a/AUTHORS
+++ b/AUTHORS
@@ -1,12 +1,5 @@
-#!/usr/bin/env bash
-set -e
+# This file lists all individuals having contributed content to the repository.
+# For how it is generated, see `hack/generate-authors.sh`.
 
-cd "$(dirname "$(readlink -f "$BASH_SOURCE")")/.."
-
-{
-	cat <<- 'EOH'
-
-	EOH
-	echo
-	git log --format='%aN <%aE>' | LC_ALL=C.UTF-8 sort -uf
-} > AUTHORS
+Alex <asenges400@gmail.com>
+PauliCrespi <4377@holbertonschool.com>
